Move a few more commands